# artifacts/api-server/src/routes/auth.ts
@@ -176,6 +176,7 @@ router.get("/callback", async (req: Request, res: Response) => {
       firstName: dbUser.firstName,
       lastName: dbUser.lastName,
       profileImageUrl: dbUser.profileImageUrl,
+      isManager: dbUser.isManager,
     },
     access_token: tokens.access_token,
     refresh_token: tokens.refresh_token,
@@ -246,6 +247,7 @@ router.post(
           firstName: dbUser.firstName,
           lastName: dbUser.lastName,
           profileImageUrl: dbUser.profileImageUrl,
+          isManager: dbUser.isManager,
         },
         access_token: tokens.access_token,
         refresh_token: tokens.refresh_token,
