# artifacts/api-server/src/types/auth.ts
@@ -4,4 +4,5 @@ export interface AuthUser {
   firstName: string | null;
   lastName: string | null;
   profileImageUrl: string | null;
+  isManager: boolean;
 }
